--- a/share/jupyter/nbconvert/templates/the-lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/the-lab/index.html.j2
@@ -1,15 +1,21 @@
 {%- extends 'lab/index.html.j2' -%}
 
+{%- block html_head_js_requirejs -%}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
+  <script type="text/javascript">
+    {% include "static/copybutton.js" %}
+  </script>
+<script src="{{ resources.require_js_url }}"></script>
+{%- endblock html_head_js_requirejs -%}
+
 {%- block html_head_css -%}
   {{ super() }}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
   integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
         crossorigin="anonymous">
   {{ resources.include_css("static/styles.css") }}
-  <style>
-  </style>
+  {{ resources.include_css("static/copybutton.css") }}
 {%- endblock html_head_css -%}
 
 {% block body_header %}
