--- a/share/jupyter/nbconvert/templates/the-lab/static/styles.css
+++ b/share/jupyter/nbconvert/templates/the-lab/static/styles.css
@@ -37,6 +37,10 @@ html {
   padding-right: 20px;
 }
 
+pre {
+  margin: 0px;
+}
+
 .jp-RenderedHTMLCommon :not(pre) > code {
   font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
   border: 1px solid #e8e8e8;
