--- a/share/jupyter/nbconvert/templates/the-lab/static/styles.css
+++ b/share/jupyter/nbconvert/templates/the-lab/static/styles.css
@@ -134,6 +134,7 @@ pre {
 .highlight .mh  { color: var(--orange) }
 .highlight .mi  { color: var(--orange) }
 .highlight .mo  { color: var(--orange) }
+.highlight .sa  { color: var(--red) }
 .highlight .sb  { color: var(--green) }
 .highlight .sc  { color: var(--green) }
 .highlight .sd  { color: var(--green) }
