--- a/share/jupyter/nbconvert/templates/the-lab/static/styles.css
+++ b/share/jupyter/nbconvert/templates/the-lab/static/styles.css
@@ -13,6 +13,7 @@
   --green: #55A868;
   --orange: #dd8452;
   --violet: #8172b3;
+  --gray: #969696;
   --headings: var(--blue);
   --highlight-background: #f6f6f6;
   --border-radius: 0.4em;
