--- a/share/jupyter/nbconvert/templates/the-lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/the-lab/index.html.j2
@@ -23,13 +23,15 @@
 {% block body_header %}
   <body class="jp-Notebook theme-light" style="padding: 0; margin: 0;">
   <div class="header">
-    {% set nb_title = nb.metadata.get("title") or resources["metadata"]["name"] %}
-    <p id="title"> {{nb_title}}</p>
+    {% set nb_title = nb.metadata.get("title") %}  {# or resources["metadata"]["name"] %} #}
+    {% if nb_title %}
+      <p id="title"> {{nb_title}}</p>
+    {% endif %}
     {% if "authors" in nb.metadata %}
       <p style="font-size:50%; padding-left: 70px">{{nb.metadata.authors | join(', ', attribute='name')}}</p>
     {% endif %}
   </div>
-  <div style="padding: 100px; margin: 20px; width: 50%; margin-left: auto; margin-right: auto;">
+  <div style="padding: 0px; margin: 20px; width: 50%; margin-left: auto; margin-right: auto;">
   {{ super() }}
 {% endblock body_header %}
 
