add footer field

--- a/share/jupyter/nbconvert/templates/the-lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/the-lab/index.html.j2
@@ -40,6 +40,6 @@
   </body>
   {{ super() }}
   <div class="footer">
-    @footer@
+    {{ footer|default('@footer@') }}
   </div>
 {% endblock body_footer %}
