--- a/share/jupyter/nbconvert/templates/the-lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/the-lab/index.html.j2
@@ -40,6 +40,7 @@
   </body>
   {{ super() }}
   <div class="footer">
-    {{ footer|default('@footer@') }}
+    {% set footer = nb.metadata.get("footer") %}
+    {{ footer|default('@footer@', true) }}
   </div>
 {% endblock body_footer %}
