--- a/share/jupyter/nbconvert/templates/the-lab/static/styles.css
+++ b/share/jupyter/nbconvert/templates/the-lab/static/styles.css
@@ -298,3 +298,42 @@ div.jp-Cell details.hide[open]>summary~* {
   -webkit-animation: collapsed-fade-in 0.3s ease-in-out;
   animation: collapsed-fade-in 0.3s ease-in-out;
 }
+
+.label, .badge {
+  display: inline-block;
+  padding: 2px 4px;
+  /* font-size: 11.844px; */
+  font-weight: bold;
+  line-height: 15px;
+  color: #ffffff;
+  vertical-align: baseline;
+  white-space: nowrap;
+  /* text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); */
+  background-color: #999999;
+}
+.badge {
+  padding-left: 9px;
+  padding-right: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+  opacity: 70%;
+}
+.badge-red {
+  background-color: #c44e52;
+}
+.badge-purple {
+  background-color: #8172b3;
+}
+.badge-green {
+  background-color: #55a868;
+}
+.badge-blue {
+  background-color: #4c72b0;
+}
+.badge-yellow {
+  background-color: #ccb974;
+}
+.badge-brown {
+  background-color: #937860;
+}
