--- a/share/jupyter/nbconvert/templates/the-lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/the-lab/index.html.j2
@@ -27,10 +27,10 @@
 {% block body_header %}
   <body class="jp-Notebook theme-light" style="padding: 0; margin: 0;">
   <div class="header" style="width: {{nb.metadata.width|default('50%')}};">
-    {% set nb_title = nb.metadata.get("title") %}  {# or resources["metadata"]["name"] %} #}
-    {% if nb_title %}
-      <p id="title"> {{nb_title}}</p>
-    {% endif %}
+    {# {% set nb_title = nb.metadata.get("title") %}  {\# or resources["metadata"]["name"] %} #\} #}
+    {# {% if nb_title %} #}
+    {#   <p id="title"> {{nb_title}}</p> #}
+    {# {% endif %} #}
     {% if "authors" in nb.metadata %}
       <p style="font-size:50%; padding-left: 70px">{{nb.metadata.authors | join(', ', attribute='name')}}</p>
     {% endif %}
