--- a/share/jupyter/nbconvert/templates/the-lab/static/styles.css
+++ b/share/jupyter/nbconvert/templates/the-lab/static/styles.css
@@ -43,6 +43,13 @@ html {
   padding-right: 20px;
 }
 
+.jp-RenderedHTMLCommon .alert {
+  padding: var(--jp-notebook-padding);
+  border-radius: var(--border-radius);
+  border-left: var(--border-left);
+  margin-bottom: 1em;
+}
+
 .jp-RenderedHTMLCommon pre {
   font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
   border: var(--jp-border-width) solid var(--jp-cell-editor-border-color);
