change output display to match input display

--- a/share/jupyter/nbconvert/templates/the-lab/static/styles.css
+++ b/share/jupyter/nbconvert/templates/the-lab/static/styles.css
@@ -170,6 +170,9 @@ pre {
 .highlight .vi  { color: var(--orange) }
 .highlight .il  { color: var(--orange) }
 
+.jp-OutputArea-output {
+  display: table;
+}
 .jp-InputPrompt, .jp-OutputPrompt {
   display: none;
 }
