--- a/share/jupyter/nbconvert/templates/the-lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/the-lab/index.html.j2
@@ -1,5 +1,12 @@
 {%- extends 'lab/index.html.j2' -%}
 
+{% block html_head %}
+  {{ super() }}
+  {% if "refresh" in nb.metadata %}
+    <meta http-equiv="refresh" content="{{ nb.metadata.refresh }}">
+  {% endif %}
+{% endblock html_head %}
+
 {%- block html_head_js_requirejs -%}
   <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0
                          0 384 512' fill='gray'><path d='M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM153 289l-31 31 31 31c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L71 337c-9.4-9.4-9.4-24.6 0-33.9l48-48c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9zM265 255l48 48c9.4 9.4 9.4 24.6 0 33.9l-48 48c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l31-31-31-31c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0z'/></svg>">
